compiler/testData/diagnostics/tests/subtyping/topLevelAnonymousObjects.kt
// RUN_PIPELINE_TILL: SOURCE
private var x = object {}

fun test() {
    x = <!TYPE_MISMATCH!>object<!> {}
}